tests/ui/traits/non_lifetime_binders/late-bound-in-anon-ct.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/late-bound-in-anon-ct.rs:1:12
   |
LL | #![feature(non_lifetime_binders, generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/late-bound-in-anon-ct.rs:1:34
   |
LL | #![feature(non_lifetime_binders, generic_const_exprs)]
   |                                  ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information

error: cannot capture late-bound type parameter in a constant
  --> $DIR/late-bound-in-anon-ct.rs:7:27
   |
LL |     for<T> [i32; { let _: T = todo!(); 0 }]:,
   |         -                 ^
   |         |
   |         parameter defined here

error: aborting due to previous error; 2 warnings emitted

